--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 __pycache__/
 *.py[cod]
 *$py.class
-/migrations/
+/migrations/*
 # C extensions
 *.so
 /.idea/
+.dea/*
 .gitignore
 # Distribution / packaging
 .Python
@@ -35,7 +36,6 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
 # Unit test / coverage reports
 htmlcov/
 .tox/
