--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.5
-cryptography==2.3
 Django==2.0.6
+django-cors-headers==3.2.0
+django-crispy-forms==1.8.0
+django-filter==2.2.0
+django-filter-stubs==0.1.1
+django-formtools==2.1
+django-import-export==1.2.0
 django-pure-pagination==0.3.0
-idna==2.7
+django-reversion==3.0.4
+djangorestframework==3.10.3
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
+future==0.18.2
 paramiko==2.4.1
-Pillow==5.1.0
-pyasn1==0.4.3
-pycparser==2.18
-PyMySQL==0.8.1
-PyNaCl==1.2.1
-pytz==2018.4
-six==1.11.0
-tornado==5.1
-xlwt==1.3.0
+Pillow==6.1.0
+PyMySQL==0.9.3
+timeline==0.0.7
+xadmin==2.0.1
